--- a/package.json
+++ b/package.json
@@ -1,10 +1,26 @@
 {
   "name": "ts-transform-test-compiler",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Compiler API for testing TypeScript transformers",
-  "main": "dist/index.js",
-  "typings": "dist/index.d.ts",
+  "keywords": [
+    "typescript",
+    "transform",
+    "test",
+    "compiler"
+  ],
+  "homepage": "https://github.com/slune-org/ts-transform-test-compiler#readme",
+  "bugs": {
+    "url": "https://github.com/slune-org/ts-transform-test-compiler/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/slune-org/ts-transform-test-compiler.git"
+  },
+  "license": "MIT",
+  "author": "Slune",
   "type": "commonjs",
+  "main": "./dist/index.js",
+  "typings": "./dist/index.d.ts",
   "files": [
     "dist/**",
     "!dist/__test__/**",
@@ -12,56 +28,52 @@
     "!dist/**/*.map"
   ],
   "scripts": {
-    "prepublishOnly": "npm run all",
-    "all": "npm run clean && npm run test && npm run build",
-    "test": "npm run test:lint && npm run test:dep && npm run test:unit",
-    "test:lint": "eslint --config .eslintrc.full.yaml 'src/**/*.ts'",
-    "test:dep": "depcheck",
+    "prepublishOnly": "pm-exec run all",
+    "all": "pm-exec run clean && pm-exec run test && pm-exec run build",
+    "test": "pm-exec run test:lint && pm-exec run test:depends && pm-exec run test:unit",
+    "test:lint": "eslint --config .eslintrc.full.yaml --max-warnings 0 'src/**/*.ts'",
+    "test:depends": "depcheck",
     "test:unit": "nyc mocha 'src/**/*.spec.ts'",
-    "build": "npm run build:main",
+    "test:dep": "depcheck",
+    "build": "pm-exec run build:main",
     "build:main": "tsc",
+    "debug": "pm-exec run debug:watch",
+    "debug:watch": "onchange 'src/**' -- pm-exec run test:unit",
     "clean": "rimraf dist"
   },
-  "keywords": [
-    "typescript",
-    "transform",
-    "test",
-    "compiler"
-  ],
-  "author": "Slune",
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/slune-org/ts-transform-test-compiler.git"
-  },
-  "peerDependencies": {
-    "typescript": "^3.0.0"
+  "dependencies": {
+    "glob": "^7.1.6"
   },
   "devDependencies": {
     "@istanbuljs/nyc-config-typescript": "1.0.1",
-    "@types/chai": "4.2.8",
-    "@types/glob": "7.1.1",
-    "@types/mocha": "7.0.1",
-    "@types/node": "13.7.0",
-    "@typescript-eslint/eslint-plugin": "2.19.0",
-    "@typescript-eslint/parser": "2.19.0",
+    "@types/chai": "4.2.12",
+    "@types/glob": "7.1.3",
+    "@types/mocha": "8.0.3",
+    "@types/node": "14.6.2",
+    "@typescript-eslint/eslint-plugin": "3.10.1",
+    "@typescript-eslint/parser": "3.10.1",
     "chai": "4.2.0",
-    "depcheck": "0.9.2",
-    "eslint": "6.8.0",
-    "eslint-config-prettier": "6.10.0",
-    "eslint-plugin-import": "2.20.1",
-    "eslint-plugin-jsdoc": "21.0.0",
-    "eslint-plugin-node": "11.0.0",
-    "eslint-plugin-prettier": "3.1.2",
-    "mocha": "7.0.1",
-    "nyc": "15.0.0",
-    "prettier": "1.19.1",
-    "rimraf": "3.0.1",
-    "source-map-support": "0.5.16",
-    "ts-node": "8.6.2",
-    "typescript": "3.7.5"
+    "depcheck": "1.2.0",
+    "eslint": "7.7.0",
+    "eslint-config-prettier": "6.11.0",
+    "eslint-plugin-import": "2.22.0",
+    "eslint-plugin-jsdoc": "30.3.0",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "3.1.4",
+    "mocha": "8.1.3",
+    "nyc": "15.1.0",
+    "onchange": "7.0.2",
+    "pm-exec": "1.0.0",
+    "prettier": "2.1.1",
+    "rimraf": "3.0.2",
+    "source-map-support": "0.5.19",
+    "ts-node": "9.0.0",
+    "typescript": "4.0.2"
   },
-  "dependencies": {
-    "glob": "7.1.6"
+  "peerDependencies": {
+    "typescript": "^4.0.2"
+  },
+  "engines": {
+    "node": ">=10.0.0"
   }
 }
